[package]
name = "plutus-rustus"
version = "0.0.1"
authors = ["a137x"]
edition = "2021"

[dependencies]
rand = "0.8.5"
bitcoin = "0.30.1"
secp256k1 = {version = "0.27.0", features = ["rand"]}
serde = {version = "1.0.188", features = ["derive"]}
serde-pickle = "1.1.1"
num_cpus = "1.16.0"
tokio = { version = "1.20.1", features = ["full"] }